k8s-manifests/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklist-db
  namespace: tasklist
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tasklist-db
  template:
    metadata:
      labels:
        app: tasklist-db
    spec:
      containers:
        - name: postgres
          image: postgres:17.6
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: tasklist-db-storage

      volumes:
        - name: tasklist-db-storage
          emptyDir: {}
