k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasklist-app
  namespace: tasklist
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasklist-app
  template:
    metadata:
      labels:
        app: tasklist-app
    spec:
      containers:
        - name: tasklist-app
          image: docker.io/sisonke10/tasklist-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
